--- a/gazebo_demo/config/joint_names_gazebo_demo.yaml
+++ b/gazebo_demo/config/joint_names_gazebo_demo.yaml
@@ -1,4 +1,4 @@
-gazebo_demo:
+bengine:
   # Publish all joint states -----------------------------------
   joint_state_controller:
     type: joint_state_controller/JointStateController
@@ -10,5 +10,5 @@ gazebo_demo:
     joint: joint_1
     #pid: {p: 100.0, i: 0.01, d: 10.0}
 
-gazebo_demo/gazebo_ros_control/pid_gains:
+bengine/gazebo_ros_control/pid_gains:
   joint_1: {p: 100.0, i: 0.0, d: 10.0}
